# machinerry

./: .bumpversion.cfg  .codeclimate.yml  .gitignore  .pylintrc  .travis.yml  CHANGES.rst  MANIFEST.in  README-skeleton.rst  README.rst  machinerry.py  requirements-dev.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  api.rst  conf.py  conf_as_extension.py  history.rst  index.rst
docs/api/: main.rst
test/: test_machinerry.py
tests/: test_machinerry.py
