[bumpversion]
current_version = 0.2.3
commit = True
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)(\.(?P<patch>\d+)|$)
serialize =
        {major}.{minor}.{patch}
        {major}.{minor}

[aliases]
release = dists upload
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[flake8]
exclude=.git,__pycache__,.tox,.eggs,*.egg,tests
max-line-length=100
show-source=true
radon-max-cc=10

# We use pycodestyle separately (since flake8 doesn't yet support the
# max-doc-length option), so we end up duplicating some of these
# settings.
[pycodestyle]
exclude=.git,__pycache__,.tox,.eggs,*.egg,tests
max-line-length=100
max-doc-length=72

[metadata]
license_file = LICENSE.txt
